modify the title of webpage

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>环球云逸直播平台</title>
+  <title>LearningByMyself</title>
   <link rel="stylesheet" href="index.css" />
 
-  <link rel="shortcut icon"  />
+  <link rel="shortcut icon"  href="http://osnwozfqv.bkt.clouddn.com/img/tutorial/2017/react/battery-low.jpg"/>
   <script src="../dist/index.js"></script>
 </head>
 <body >
